[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Store/Store.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Store/BodyParts.gd" type="Script" id=2]

[node name="Store" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_right = 210.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 214.0
margin_right = 424.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 210.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tab1" type="Tabs" parent="HBoxContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="BodyParts" type="ItemList" parent="HBoxContainer/VBoxContainer/TabContainer/Tab1"]
margin_left = -0.773773
margin_top = -3.09512
margin_right = 205.226
margin_bottom = 298.905
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Tab2" type="Tabs" parent="HBoxContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ReturnToMainButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 210.0
margin_bottom = 360.0
text = "ReturnToMain"

[node name="Panel2" type="Panel" parent="HBoxContainer"]
margin_left = 428.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/ReturnToMainButton" to="." method="_on_ReturnToMainButton_pressed"]
